rating filling issue fixed,single page layout issue fixed

--- a/assets/css/tourfic-styles.css
+++ b/assets/css/tourfic-styles.css
@@ -2563,6 +2563,7 @@ button.tf-cr-slider-arrow.prev-arrow {
   right: 0;
   bottom: 32%;
   width: 70%;
+  border: 2px solid #002c66;
 }
 .tf-tour-booking-wrap .tf_selectperson-wrap {
   width: 40%;
@@ -2578,6 +2579,7 @@ button.tf-cr-slider-arrow.prev-arrow {
 .tf-tour-booking-wrap.tf-tours-fixed {
   width: 50.5%;
   z-index: 10;
+  border: 2px solid #002c66;
 }
 .tf-tour-booking-wrap.tf-tours-fixed .tf_acrselection-wrap {
   position: absolute;
